objects/CN_API_Call_Logger__c.object
<CustomObject>
    <description>API Call Log</description>
    <fields>
        <fullName>CN_Class_Name__c</fullName>
        <label>Class Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WS_Contact_Registered_Insert</fullName>
                </value>
                <value>
                    <fullName>CN_Contact_Registered_Insert_Rest</fullName>
                </value>
                <value>
                    <fullName>CN_CR_ShipTo_Address_Upsert_Rest</fullName>
                </value>
                <value>
                    <fullName>CN_Account_Customer_Code_To_Mg_Callout</fullName>
                </value>
                <value>
                    <fullName>CN_CR_Contact_Billing_Upsert_Rest</fullName>
                </value>
                <value>
                    <fullName>CN_LeadUpsert_Rest</fullName>
                </value>
                <value>
                    <fullName>CN_Contact_Upsert_To_Mg_Callout</fullName>
                </value>
                <value>
                    <fullName>CN_ShipTo_Upsert_To_Mg_Callout</fullName>
                </value>
                <value>
                    <fullName>CN_CR_Approved_Result_To_Mg_Callout</fullName>
                </value>
                <value>
                    <fullName>CN_Download_By_Url_Batch</fullName>
                </value>
                <value>
                    <fullName>CN_Account_Inactive_To_Mg_Callout</fullName>
                </value>
                <value>
                    <fullName>CN_Arrival_Reminder_Upsert_Rest</fullName>
                </value>
                <value>
                    <fullName>CN_Lead_Upsert_To_Mg_Callout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Create_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Create Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_DataBase_Result__c</fullName>
        <label>DataBase Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>API Call Logger</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CN_Create_Time__c</columns>
        <columns>CN_Class_Name__c</columns>
        <columns>CN_Error_Message__c</columns>
        <columns>CN_DataBase_Result__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CN_Status_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_List</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INF-{YYYYMMDD}{0000}</displayFormat>
        <label>API Call Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Call Loggers</pluralLabel>
    <recordTypes>
        <fullName>CN_Call_Logger</fullName>
        <active>true</active>
        <label>CN_Call_Logger</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>